<resources>
    <string name="app_name" translatable="false">Calculatrice</string>
    <string name="button_plus" translatable="false">+</string>
    <string name="button_substract" translatable="false">-</string>
    <string name="button_multiply" translatable="false">*</string>
    <string name="button_divide" translatable="false">/</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_3" translatable="false">3</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_9" translatable="false">9</string>
    <string name="button_0" translatable="false">0</string>
    <string name="calcul_mental">Calcul Mental</string>
    <string name="score">score</string>
    <string name="valider">Valider</string>
    <string name="Erreur_res">Erreur Résultat</string>
    <string name="point" translatable="false">.</string>
    <string name="Score">\"Score : \"</string>
    <string name="moins" translatable="false">-</string>
    <string name="nettoyer">Nettoyer</string>
    <string name="facile">Facile</string>
    <string name="moyen">Moyen</string>
    <string name="difficile">Difficile</string>
    <string name="asiatique">Asiatique</string>
    <string name="selectioner_votre_dificult">Selectioner votre dificulté</string>
    <string name="Vie">\"Vie \"</string>


</resources>