<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Dificulty">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Textview_Instruction_diff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectioner_votre_dificult" />

        <Button
            android:id="@+id/button_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facile" />

        <Button
            android:id="@+id/button_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moyen" />

        <Button
            android:id="@+id/button_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficile" />

        <Button
            android:id="@+id/button_Asian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asiatique" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>